# mtc-patstat-mcp-lite

./: .gitignore  .mcp.json.example  CLAUDE.md  Dockerfile  LICENSE.txt  README.md  pyproject.toml
config/: patstat-mcp.json
config/prompts/: default.txt
data/: .gitkeep
data/samples/: tls204_appln_prior.json  tls206_person.json  tls210_appln_n_cls.json  tls212_citation.json  tls225_docdb_fam_cpc.json  tls228_docdb_fam_citn.json  tls230_appln_techn_field.json  tls231_inpadoc_legal_event.json  tls803_legal_event_code.json  tls902_ipc_nace2.json  tls_cpc_hierarchy.json
data/tables/: tls201_appln.json  tls203_appln_abstr.json  tls204_appln_prior.json  tls212_citation.json  tls214_npl_publn.json  tls215_citn_categ.json  tls216_appln_contn.json  tls222_appln_jp_class.json  tls226_person_orig.json  tls227_pers_publn.json  tls801_country.json  tls803_legal_event_code.json  tls904_nuts.json  tls_ipc_catchword.json  tls_ipc_everused.json
scripts/: sync-from-upstream.sh
src/patstat_mcp/: __init__.py  config.py  context.py  server.py  tip_client.py  tools.py
src/patstat_mcp/resources/prompts/: default.txt
src/patstat_mcp/resources/samples/: tls201_appln.json  tls202_appln_title.json  tls203_appln_abstr.json  tls205_tech_rel.json  tls207_pers_appln.json  tls209_appln_ipc.json  tls211_pat_publn.json  tls214_npl_publn.json  tls215_citn_categ.json  tls216_appln_contn.json  tls222_appln_jp_class.json  tls224_appln_cpc.json  tls226_person_orig.json  tls227_pers_publn.json  tls229_appln_nace2.json  tls801_country.json  tls904_nuts.json  (+5 more)
tests/: test_context.py  test_tools.py
(+18 files in other folders)
